fix: 隐藏软件图标、名称、版本信息等

--- a/app/pages/debugger.html
+++ b/app/pages/debugger.html
@@ -151,12 +151,12 @@
                 <button class="header-max header-unmax"></button>
                 <button class="header-close"></button>
             </div>
-            <div class="logo-box">
-                <i class="img-logo"></i>
-                <div class="logo-tit-box">
-                    <span class="logo-main-tit">调试器</span>
-                </div>
-            </div>
+<!--            <div class="logo-box">-->
+<!--                <i class="img-logo"></i>-->
+<!--                <div class="logo-tit-box">-->
+<!--                    <span class="logo-main-tit">调试器</span>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
     <div id="main-body">
