--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -41,25 +41,25 @@
         <div class="can-drog-area" style="width:85%;height:100%;position:absolute;z-index:-1;background:transparent;-webkit-app-region: drag;"></div>
         <div class="header-box">
             <div class="header-do">
-                <button class="header-set"></button>
+<!--                <button class="header-set"></button>-->
                 <button class="header-min"></button>
                 <button class="header-max"></button>
                 <button class="header-close"></button>
             </div>
-            <div class="logo-box">
-                <i class="img-logo"></i>
-                <div class="logo-tit-box">
-                    <span class="logo-main-tit"></span>
-                    <div class="status-an">
-                        <span class="logo-little-tit animation-status">-工作中
-                            <i>.</i>
-                            <i>.</i>
-                            <i>.</i>
-                        </span>
-                    </div>
-                    <!-- < developers/> </span> -->
-                </div>
-            </div>
+<!--            <div class="logo-box">-->
+<!--                <i class="img-logo"></i>-->
+<!--                <div class="logo-tit-box">-->
+<!--                    <span class="logo-main-tit"></span>-->
+<!--                    <div class="status-an">-->
+<!--                        <span class="logo-little-tit animation-status">-工作中-->
+<!--                            <i>.</i>-->
+<!--                            <i>.</i>-->
+<!--                            <i>.</i>-->
+<!--                        </span>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash; < developers/> </span> &ndash;&gt;-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
     <div class="main-box">
