fix: webview更改为固定使用chrome的UA

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -291,7 +291,7 @@
         </div>
         <div class="main-botttpm webview-height-0">
             <webview id="foo" src="about:blank" style="display: inline-flex;height:100%;" preload="../renderer/base/webview/listen.js"
-                partition="main"></webview>
+                partition="main" useragent='Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36'></webview>
         </div>
         <div class="debugger-parameters">
             <div class="debugger-current-node">
